--- a/config.json
+++ b/config.json
@@ -1,6 +1,6 @@
 {
-  "name": "Cornerstone",
-  "version": "6.2.0",
+  "name": "Groovy",
+  "version": "1.0.0",
   "template_engine": "handlebars_v4",
   "meta": {
     "price": 0,
